Clean up gradle build file